# claude_code_setup

./: .editorconfig  .mcp.json.example  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SPEC.md  pyproject.toml  tox.ini
.claude/: settings.local.json
.claude/agents/: api-designer.md  architect.md  cloud-platform-architect.md  code-reviewer.md  code-simplifier.md  database-specialist.md  debugger.md  docs-writer.md  implementer.md  project-librarian.md  refactorer.md  test-writer.md
.claude/commands/: create-pr.md  plan-to-issues.md  review-pr.md  solve-issue.md
.claude/skills/maintaining-project-context/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
HOME_DIR_FILES/: CLAUDE.md  settings.json
HOME_DIR_FILES/hooks/: block_heredoc.ps1
src/claude_code_setup/: __init__.py
src/claude_code_setup/core/: __init__.py  main.py
src/claude_code_setup/utils/: __init__.py  helpers.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  test_e2e.py
tests/integration/: __init__.py  test_integration.py
tests/unit/: __init__.py  test_core.py  test_utils.py
